--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,11 @@
 # production
 /build
 
+# user-files
+/src/backend/auto_pdd_output/
+/src/backend/pdd_template/
+/src/backend/provided_documents/
+
 # misc
 .DS_Store
 *.pem
@@ -43,3 +48,4 @@ next-env.d.ts
 # firebase
 firebase-debug.log
 firestore-debug.log
+
